--- a/MainWindow.xib
+++ b/MainWindow.xib
@@ -67,6 +67,16 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<int key="IBUIProgressViewStyle">1</int>
 			</object>
+			<object class="IBUIProgressView" id="726805950">
+				<nil key="NSNextResponder"/>
+				<int key="NSvFlags">292</int>
+				<string key="NSFrameSize">{100, 11}</string>
+				<bool key="IBUIOpaque">NO</bool>
+				<bool key="IBUIClipsSubviews">YES</bool>
+				<bool key="IBUIMultipleTouchEnabled">YES</bool>
+				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+				<int key="IBUIProgressViewStyle">1</int>
+			</object>
 			<object class="IBUITabBarController" id="1034742383">
 				<object class="IBUISimulatedTabBarMetrics" key="IBUISimulatedBottomBarMetrics"/>
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
@@ -77,7 +87,7 @@
 				<bool key="IBUIHorizontal">NO</bool>
 				<object class="IBUIViewController" key="IBUISelectedViewController" id="268481961">
 					<object class="IBUIView" key="IBUIView" id="932465775">
-						<reference key="NSNextResponder"/>
+						<nil key="NSNextResponder"/>
 						<int key="NSvFlags">274</int>
 						<object class="NSMutableArray" key="NSSubviews">
 							<bool key="EncodedWithXMLCoder">YES</bool>
@@ -86,7 +96,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{42, 269}, {228, 23}}</string>
 								<reference key="NSSuperview" ref="932465775"/>
-								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -100,7 +109,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{42, 302}, {228, 23}}</string>
 								<reference key="NSSuperview" ref="932465775"/>
-								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -114,7 +122,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{42, 335}, {228, 23}}</string>
 								<reference key="NSSuperview" ref="932465775"/>
-								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -128,7 +135,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 270}, {16, 21}}</string>
 								<reference key="NSSuperview" ref="932465775"/>
-								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -147,7 +153,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 303}, {16, 21}}</string>
 								<reference key="NSSuperview" ref="932465775"/>
-								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -163,7 +168,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 336}, {16, 21}}</string>
 								<reference key="NSSuperview" ref="932465775"/>
-								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -179,7 +183,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{42, 368}, {228, 23}}</string>
 								<reference key="NSSuperview" ref="932465775"/>
-								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -193,7 +196,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 369}, {16, 21}}</string>
 								<reference key="NSSuperview" ref="932465775"/>
-								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -209,7 +211,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{76, 183}, {194, 23}}</string>
 								<reference key="NSSuperview" ref="932465775"/>
-								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -225,7 +226,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{76, 213}, {194, 23}}</string>
 								<reference key="NSSuperview" ref="932465775"/>
-								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -241,7 +241,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 184}, {50, 21}}</string>
 								<reference key="NSSuperview" ref="932465775"/>
-								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -257,7 +256,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{276, 184}, {24, 21}}</string>
 								<reference key="NSSuperview" ref="932465775"/>
-								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -279,7 +277,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{95, 153}, {175, 23}}</string>
 								<reference key="NSSuperview" ref="932465775"/>
-								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -295,7 +292,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 153}, {69, 20}}</string>
 								<reference key="NSSuperview" ref="932465775"/>
-								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -316,7 +312,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{276, 153}, {24, 21}}</string>
 								<reference key="NSSuperview" ref="932465775"/>
-								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -334,7 +329,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{276, 214}, {24, 21}}</string>
 								<reference key="NSSuperview" ref="932465775"/>
-								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -352,7 +346,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{276, 268}, {24, 25}}</string>
 								<reference key="NSSuperview" ref="932465775"/>
-								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -375,7 +368,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{276, 301}, {24, 25}}</string>
 								<reference key="NSSuperview" ref="932465775"/>
-								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -394,7 +386,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{276, 334}, {24, 25}}</string>
 								<reference key="NSSuperview" ref="932465775"/>
-								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -413,7 +404,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{276, 367}, {24, 25}}</string>
 								<reference key="NSSuperview" ref="932465775"/>
-								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -432,7 +422,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 214}, {50, 21}}</string>
 								<reference key="NSSuperview" ref="932465775"/>
-								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -448,7 +437,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 119}, {50, 21}}</string>
 								<reference key="NSSuperview" ref="932465775"/>
-								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -464,7 +452,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{78, 114}, {222, 31}}</string>
 								<reference key="NSSuperview" ref="932465775"/>
-								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -492,8 +479,6 @@
 							</object>
 						</object>
 						<string key="NSFrame">{{0, 24}, {320, 411}}</string>
-						<reference key="NSSuperview"/>
-						<reference key="NSWindow"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MC43NQA</bytes>
@@ -1049,19 +1034,19 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">progressView</string>
-						<reference key="source" ref="456368547"/>
-						<reference key="destination" ref="368518703"/>
-					</object>
-					<int key="connectionID">272</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">searchDisplayController</string>
 						<reference key="source" ref="456368547"/>
 						<reference key="destination" ref="1039783053"/>
 					</object>
 					<int key="connectionID">274</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">progressView</string>
+						<reference key="source" ref="456368547"/>
+						<reference key="destination" ref="726805950"/>
+					</object>
+					<int key="connectionID">279</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -1398,6 +1383,11 @@
 						<reference key="object" ref="765311004"/>
 						<reference key="parent" ref="456368547"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">278</int>
+						<reference key="object" ref="726805950"/>
+						<reference key="parent" ref="0"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -1459,6 +1449,8 @@
 					<string>263.IBPluginDependency</string>
 					<string>264.IBPluginDependency</string>
 					<string>265.IBPluginDependency</string>
+					<string>278.IBEditorWindowLastContentRect</string>
+					<string>278.IBPluginDependency</string>
 					<string>3.CustomClassName</string>
 					<string>3.IBPluginDependency</string>
 				</object>
@@ -1525,6 +1517,8 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>{{427, 662}, {100, 11}}</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>AppDelegate</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				</object>
@@ -1545,7 +1539,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">277</int>
+			<int key="maxID">279</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1613,14 +1607,35 @@
 						</object>
 					</object>
 					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">saveButton</string>
-						<string key="NS.object.0">UIBarButtonItem</string>
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>imageView</string>
+							<string>saveButton</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>UIImageView</string>
+							<string>UIBarButtonItem</string>
+						</object>
 					</object>
 					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">saveButton</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
-							<string key="name">saveButton</string>
-							<string key="candidateClassName">UIBarButtonItem</string>
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>imageView</string>
+							<string>saveButton</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBToOneOutletInfo">
+								<string key="name">imageView</string>
+								<string key="candidateClassName">UIImageView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">saveButton</string>
+								<string key="candidateClassName">UIBarButtonItem</string>
+							</object>
 						</object>
 					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
@@ -2192,9 +2207,9 @@
 			</object>
 			<object class="NSMutableArray" key="dict.values">
 				<bool key="EncodedWithXMLCoder">YES</bool>
-				<string>{64, 64}</string>
-				<string>{64, 64}</string>
-				<string>{64, 64}</string>
+				<string>{24, 24}</string>
+				<string>{24, 24}</string>
+				<string>{16, 16}</string>
 			</object>
 		</object>
 		<string key="IBCocoaTouchPluginVersion">117</string>
